--- a/views/assets/css/styles.css
+++ b/views/assets/css/styles.css
@@ -15,6 +15,15 @@
     box-sizing: border-box;
     padding: 10px;
 }
+.no-margin{
+    margin: 0px !important;
+}
+.big-height{
+    height: 600px !important;
+}
+.overflow-auto{
+    overflow:auto !important;
+}
 .login-header{
     width: 100%;
     height: 100px;
@@ -59,7 +68,30 @@
 .md-table{
     width: 100%;
 }
-
+.button-icon{
+    width: 25px;
+    height: 20px;
+}
+.right-radius-none{
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius:0px !important;
+}
+.right-radius-block{
+    border-top-right-radius: 4px !important;
+    border-bottom-right-radius:4px !important;
+}
+.botao-pesquisar{
+    border: none;
+    box-shadow: none;
+    background-color: #093B88;
+}
+.custom-bootstrap-input{
+    outline: none !important;
+    margin-right: 1px !important;
+}
+.custom-bootstrap-input::before{
+    outline: none;
+}
 /* ORÇAMENTOS */
 
 #cadastro-orcamento{
