--- a/views/assets/css/styles.css
+++ b/views/assets/css/styles.css
@@ -159,8 +159,20 @@ footer h5{
     z-index: -5;
 }
 .content{
-    width: 600px;
-    height: 550px;
+    width: 800px;
+    height: 650px;
     background-color:#ffffff;
+    border-radius: 8px;
+}
+.fix-height{
+    height: 400px !important;
+}
+#table_wrapper{
+    width: 100%;
+    height: 300px !important;
+}
+.button-icon{
+    width: 18px !important;
+    height: 18px !important;
 }
 
