--- a/views/assets/css/pdf_styles.css
+++ b/views/assets/css/pdf_styles.css
@@ -31,3 +31,33 @@
     min-height: 200px;
     border: solid 2px #000;
 }
+#exb_footer,
+#exb_observacoes,
+#exb_total,
+#exb_condicoes_pagamento{
+    width: 100%;
+    height: auto;
+    
+}
+.info_footer_exb,
+.valor_total,
+.observacoes,
+.condicoes_pagamento{
+    width: 100%;
+    height: 100px;
+    border: solid 2px #000;
+    overflow: hidden;
+}
+.valor_total{
+    height: 80px;
+}
+.condicoes_pagamento{
+    height: 70px;
+}
+.light-blue-row{
+    background: #dee2e6 !important;
+}
+.no_m_p{
+    margin: 0px !important;
+    padding: 0 !important;
+}
