--- a/views/assets/css/pdf_styles.css
+++ b/views/assets/css/pdf_styles.css
@@ -1,9 +1,38 @@
-#heade_pdf{
+@page{
+    margin: 0px 0;
+    size: A4;
+}
+body{
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+#heade_pdf,
+.header_fake{
     width: 100%;
     height: 130px;
 }
+#heade_pdf{
+    position: fixed;
+    top: 0;
+    z-index: 99;
+}
 .exb_logo{
+    width: 160px;
     height: 130px;
+}
+
+.bolder{
+    font-weight: bold;
+}
+.degrade_top1{
+    background-image: linear-gradient(to right, #FFFFFF,#1290CB);
+}
+.degrade_top2{
+    background-image: linear-gradient(to right, #1290CB,#196f97) !important;
+}
+.exb_logo img{
+    width: 100%;
+    height: 100%;
 }
 #exb_info{
     width: 100%;
@@ -12,15 +41,19 @@
 .exb_info_wrapper{
     width: 100%;
     height: 100%;
-    border: solid 2px #000;
+}
+.max-width{
+    width: 100vw !important;
 }
 .nome_cliente{
     width: 100%;
     height: 30px;
 }
 .border-bottom{
-    
-    border-bottom:solid 1px #000 !important;
+    border-bottom: solid 2px rgba(151, 151, 151, 0.493)!important;
+}
+.total_valor{
+    font-size: 20px !important;
 }
 #itens_wrapper{
     width:100%;
@@ -29,7 +62,10 @@
 .itens_orcamento{
     width: 100%;
     min-height: 200px;
-    border: solid 2px #000;
+}
+.all_borders{
+    border-left: solid 2px rgba(151, 151, 151, 0.493)!important;
+    border-right: solid 2px rgba(151, 151, 151, 0.493)!important;
 }
 #exb_footer,
 #exb_observacoes,
@@ -37,7 +73,17 @@
 #exb_condicoes_pagamento{
     width: 100%;
     height: auto;
-    
+}
+.footer_fake{
+    width: 100%;
+    height: 100px;
+}
+#exb_footer{
+   position: fixed;
+   bottom: 0px;
+}
+#exb_total .pr-5{
+    padding-right: 100px !important;
 }
 .info_footer_exb,
 .valor_total,
@@ -45,11 +91,16 @@
 .condicoes_pagamento{
     width: 100%;
     height: 100px;
-    border: solid 2px #000;
+    border: solid 2px rgba(168, 168, 168, 0.274);
     overflow: hidden;
 }
 .valor_total{
     height: 80px;
+    border: unset;
+}
+.info_footer_exb{
+    border:unset;
+    background-image: linear-gradient(to right, #FFFFFF,#196f97)
 }
 .condicoes_pagamento{
     height: 70px;
@@ -60,4 +111,7 @@
 .no_m_p{
     margin: 0px !important;
     padding: 0 !important;
+}
+.conteudo_dinamico{
+    height: 100% !important;
 }
